--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon dist/src/app.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "nodemon": "^2.0.19",
     "tslint": "^6.1.3",
