--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon dist/src/app.js"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "nodemon": "^2.0.19",
@@ -16,6 +17,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
